--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nome do projeto</title>
+    <title>duzess</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
@@ -16,3 +16,5 @@
             <a class="cabecalho__menu__link" href="info.html">HTML5</a>
         </nav>
     </header>
+    
+    
